--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ run.dependsOn(jar);
 dependencies {
     compile 'org.jetbrains:annotations:20.1.0'
     testCompile group: 'junit', name: 'junit', version: '4.11'
-    implementation 'net.dv8tion:JDA:4.2.0_240'
+    implementation 'com.discord4j:discord4j-core:3.1.3'
     compile project(":logger")
     implementation 'com.google.code.gson:gson:2.6.2'
     implementation 'commons-cli:commons-cli:1.4'
